Heavily modded pcb + New footprint associations

--- a/hardware/board.cmp
+++ b/hardware/board.cmp
@@ -1,416 +1,475 @@
-Cmp-Mod V01 Created by Cvpcb (2014-08-05 BZR 5054)-product   date = Wed 05 Nov 2014 02:37:36 AM EAT
+Cmp-Mod V01 Genere par PcbNew le Mon 29 Dec 2014 10:58:51 PM EAT
 
 BeginCmp
-TimeStamp = /53F113F7;
+TimeStamp = 54A1481F
+Path = /53F113F7
 Reference = BT1;
 ValeurCmp = CONN_4;
-IdModule  = Connect:SIL-4;
+IdModule  = Pin_Headers:Pin_Header_Straight_1x04;
 EndCmp
 
 BeginCmp
-TimeStamp = /53F13EA7;
+TimeStamp = 54A0B20A
+Path = /53F13EA7
 Reference = C1;
 ValeurCmp = 100uF;
 IdModule  = Capacitors_ThroughHole:Capacitor10x25RM2.5;
 EndCmp
 
 BeginCmp
-TimeStamp = /53F13ECE;
+TimeStamp = 54A0B21C
+Path = /53F13ECE
 Reference = C2;
 ValeurCmp = 6800uF;
 IdModule  = Capacitors_ThroughHole:Capacitor16x25RM7.5;
 EndCmp
 
 BeginCmp
-TimeStamp = /53F1207E;
-Reference = C3;
-ValeurCmp = 100nF;
-IdModule  = Capacitors_ThroughHole:Capacitor7.5MMDiscRM5;
-EndCmp
-
-BeginCmp
-TimeStamp = /54585EC1;
+TimeStamp = 54A115E9
+Path = /54585EC1
 Reference = C4;
 ValeurCmp = C_MINI;
 IdModule  = Capacitors_ThroughHole:Capacitor5x11RM2.5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54585D8E;
+TimeStamp = 54A115F6
+Path = /54585D8E
 Reference = C5;
 ValeurCmp = C_MINI;
 IdModule  = Capacitors_ThroughHole:Capacitor5x11RM2.5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54585C06;
+TimeStamp = 54A0DE80
+Path = /54585C06
 Reference = C6;
 ValeurCmp = C_MINI;
 IdModule  = Capacitors_ThroughHole:Capacitor5x11RM2.5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54583944;
+TimeStamp = 54A0DE73
+Path = /54583944
 Reference = C7;
 ValeurCmp = C_MINI;
 IdModule  = Capacitors_ThroughHole:Capacitor5x11RM2.5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54598E1A;
+TimeStamp = 54A0B265
+Path = /54598E1A
 Reference = C8;
 ValeurCmp = CP;
 IdModule  = Capacitors_ThroughHole:Capacitor8x13RM3.8;
 EndCmp
 
 BeginCmp
-TimeStamp = /54598E7A;
+TimeStamp = 54A0B274
+Path = /54598E7A
 Reference = C9;
 ValeurCmp = CP;
 IdModule  = Capacitors_ThroughHole:Capacitor8x13RM3.8;
 EndCmp
 
 BeginCmp
-TimeStamp = /5459CD98;
-Reference = D1;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /5459CE17;
-Reference = D2;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /5459CEFE;
-Reference = D3;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /5459CE91;
-Reference = D4;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /544291E1;
-Reference = D5;
-ValeurCmp = DIODESCH;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /53F28C48;
+TimeStamp = 54A1480F
+Path = /53F28C48
 Reference = D6;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /545873B3;
+TimeStamp = 54A0DE66
+Path = /545873B3
 Reference = D7;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /54587428;
+TimeStamp = 54A0DE56
+Path = /54587428
 Reference = D8;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /545874A1;
+TimeStamp = 54A0DE46
+Path = /545874A1
 Reference = D9;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /54587730;
+TimeStamp = 54A0DE36
+Path = /54587730
 Reference = D10;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /5458751E;
+TimeStamp = 54A0DE26
+Path = /5458751E
 Reference = D11;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /545876A9;
+TimeStamp = 54A0DE16
+Path = /545876A9
 Reference = D12;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /5458759B;
+TimeStamp = 54A0DE06
+Path = /5458759B
 Reference = D13;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /54587618;
+TimeStamp = 54A0DDF6
+Path = /54587618
 Reference = D14;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-5MM;
 EndCmp
 
 BeginCmp
-TimeStamp = /545865BB;
-Reference = D15;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /54586526;
-Reference = D16;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /545864A1;
-Reference = D17;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /5458472A;
-Reference = D18;
-ValeurCmp = DIODE;
-IdModule  = Diodes_ThroughHole:Diode_DO-35_SOD27_Horizontal_RM10;
-EndCmp
-
-BeginCmp
-TimeStamp = /53F13E56;
+TimeStamp = 54A0BA05
+Path = /53F13E56
 Reference = F1;
 ValeurCmp = 1A;
 IdModule  = Fuse_Holders_and_Fuses:Fuseholder5x20_horiz_SemiClosed_Casing10x25mm;
 EndCmp
 
 BeginCmp
-TimeStamp = /5443F4AB;
+TimeStamp = 54A0DDE6
+Path = /5443F4AB
 Reference = IC1;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /54582232;
+TimeStamp = 54A0DDD6
+Path = /54582232
 Reference = IC2;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /545822B3;
+TimeStamp = 54A0DDC6
+Path = /545822B3
 Reference = IC3;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /545822EF;
+TimeStamp = 54A0DDB6
+Path = /545822EF
 Reference = IC4;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /54582328;
+TimeStamp = 54A0DDA6
+Path = /54582328
 Reference = IC5;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /545823B4;
+TimeStamp = 54A0DD96
+Path = /545823B4
 Reference = IC6;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /5458240B;
+TimeStamp = 54A0DD86
+Path = /5458240B
 Reference = IC7;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /54582BA2;
+TimeStamp = 54A0DD76
+Path = /54582BA2
 Reference = IC8;
 ValeurCmp = PC817;
-IdModule  = ;
+IdModule  = opto:DIP-4__300;
 EndCmp
 
 BeginCmp
-TimeStamp = /54429228;
+TimeStamp = 54A0B41A
+Path = /54429228
 Reference = L1;
 ValeurCmp = INDUCTOR;
 IdModule  = Inductors:INDUCTOR_V;
 EndCmp
 
 BeginCmp
-TimeStamp = /545AEC09;
-Reference = P1;
-ValeurCmp = SCREW TERM 1;
-IdModule  = Terminal_Blocks:TerminalBlock_WAGO-236_2Stift_RM5mm_3pol;
-EndCmp
-
-BeginCmp
-TimeStamp = /545AFCB9;
-Reference = P2;
-ValeurCmp = SCREW TERM 2;
-IdModule  = Terminal_Blocks:TerminalBlock_WAGO-236_2Stift_RM5mm_3pol;
-EndCmp
-
-BeginCmp
-TimeStamp = /545AFD22;
-Reference = P3;
-ValeurCmp = SCREW TERM 3;
-IdModule  = Terminal_Blocks:TerminalBlock_WAGO-236_2Stift_RM5mm_3pol;
-EndCmp
-
-BeginCmp
-TimeStamp = /53F11F1C;
+TimeStamp = 54A147FF
+Path = /53F11F1C
 Reference = Pickit3;
 ValeurCmp = CONN_6;
-IdModule  = Connect:SIL-6;
+IdModule  = Pin_Headers:Pin_Header_Straight_1x06;
 EndCmp
 
 BeginCmp
-TimeStamp = /53F0F6F2;
+TimeStamp = 54A147ED
+Path = /53F0F6F2
 Reference = Q1;
 ValeurCmp = BC547;
 IdModule  = Discret:TO92;
 EndCmp
 
 BeginCmp
-TimeStamp = /5458198E;
+TimeStamp = 54A0DD66
+Path = /54A0A456
 Reference = Q2;
 ValeurCmp = RFP50N06;
 IdModule  = Transistors_TO-220:TO-220_FET-GDS_Vertical_LargePads;
 EndCmp
 
 BeginCmp
-TimeStamp = /54581A5C;
+TimeStamp = 54A0DD4D
+Path = /54A0A431
 Reference = Q3;
 ValeurCmp = RFP50N06;
 IdModule  = Transistors_TO-220:TO-220_FET-GDS_Vertical_LargePads;
 EndCmp
 
 BeginCmp
-TimeStamp = /54581B2D;
+TimeStamp = 54A0DD34
+Path = /54A0A3AC
 Reference = Q4;
 ValeurCmp = RFP50N06;
 IdModule  = Transistors_TO-220:TO-220_FET-GDS_Vertical_LargePads;
 EndCmp
 
 BeginCmp
-TimeStamp = /54581BE7;
+TimeStamp = 54A0DD1B
+Path = /54A075B5
 Reference = Q5;
 ValeurCmp = RFP50N06;
 IdModule  = Transistors_TO-220:TO-220_FET-GDS_Vertical_LargePads;
 EndCmp
 
 BeginCmp
-TimeStamp = /53F103D6;
-Reference = R1;
-ValeurCmp = 1k;
-IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /53F120A3;
+TimeStamp = 54A147D4
+Path = /53F120A3
 Reference = R2;
 ValeurCmp = 10k;
 IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
 EndCmp
 
 BeginCmp
-TimeStamp = /53F29102;
-Reference = R3;
-ValeurCmp = 1k;
-IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /5443F9FA;
-Reference = R4;
-ValeurCmp = R;
-IdModule  = Resistors_ThroughHole:Resistor_Horizontal_RM20mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /54582D22;
-Reference = R5;
-ValeurCmp = R;
-IdModule  = Resistors_ThroughHole:Resistor_Horizontal_RM20mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /54582D98;
-Reference = R6;
-ValeurCmp = R;
-IdModule  = Resistors_ThroughHole:Resistor_Horizontal_RM20mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /54582E2B;
-Reference = R7;
-ValeurCmp = R;
-IdModule  = Resistors_ThroughHole:Resistor_Horizontal_RM20mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /53F0FF84;
-Reference = SP1;
-ValeurCmp = SPEAKER;
-IdModule  = Buzzers_Beepers:MagneticBuzzer_ProSignal_ABI-009-RC;
-EndCmp
-
-BeginCmp
-TimeStamp = /54429063;
-Reference = U1;
-ValeurCmp = LM2576;
-IdModule  = Sockets_WAGO734:WAGO_734_5pin_Straight_RuggedPads;
-EndCmp
-
-BeginCmp
-TimeStamp = /53F0F681;
+TimeStamp = 54A147C2
+Path = /53F0F681
 Reference = U2;
 ValeurCmp = PIC16F628A;
 IdModule  = Sockets_DIP:DIP-18__300_ELL;
 EndCmp
 
 BeginCmp
-TimeStamp = /54583F67;
+TimeStamp = 54A12368
+Path = /54A13128
 Reference = U3;
-ValeurCmp = LM7810ACT;
-IdModule  = Transistors_TO-220:TO-220_FET-GDS_Vertical_MountedFromLS_LargePads;
+ValeurCmp = LM7810;
+IdModule  = moje's kicad footprints:78XX;
 EndCmp
 
 BeginCmp
-TimeStamp = /54429DD8;
+TimeStamp = 54A189F2
+Path = /545AFD22
+Reference = P3;
+ValeurCmp = SCREW TERM 3;
+IdModule  = moje's kicad footprints:Sawatronix_screwterm3;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B93B
+Path = /545AFCB9
+Reference = P2;
+ValeurCmp = SCREW TERM 2;
+IdModule  = moje's kicad footprints:Sawatronix_screwterm3;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0BA53
+Path = /545AEC09
+Reference = P1;
+ValeurCmp = SCREW TERM 1;
+IdModule  = moje's kicad footprints:Sawatronix_screwterm3;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0DD02
+Path = /54582E2B
+Reference = R7;
+ValeurCmp = R;
+IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0DCF9
+Path = /54582D98
+Reference = R6;
+ValeurCmp = R;
+IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0DCF0
+Path = /54582D22
+Reference = R5;
+ValeurCmp = R;
+IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0DCE7
+Path = /5443F9FA
+Reference = R4;
+ValeurCmp = R;
+IdModule  = Resistors_ThroughHole:Resistor_Vertical_RM5mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A147A4
+Path = /53F0FF84
+Reference = SP1;
+ValeurCmp = SPEAKER;
+IdModule  = Buzzers_Beepers:MagneticBuzzer_ProSignal_ABT-410-RC;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A14798
+Path = /53F1207E
+Reference = C3;
+ValeurCmp = 100nF;
+IdModule  = Capacitors_ThroughHole:Capacitor3MMDiscRM2.5;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B283
+Path = /5459CD98
+Reference = D1;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B292
+Path = /5459CE17
+Reference = D2;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B2A1
+Path = /5459CEFE
+Reference = D3;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B2B0
+Path = /5459CE91
+Reference = D4;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B2BF
+Path = /544291E1
+Reference = D5;
+ValeurCmp = DIODESCH;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A13924
+Path = /545865BB
+Reference = D15;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A12A49
+Path = /54586526
+Reference = D16;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B373
+Path = /545864A1
+Reference = D17;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B382
+Path = /5458472A
+Reference = D18;
+ValeurCmp = DIODE;
+IdModule  = Diodes_ThroughHole:Diode_DO-41_SOD81_Vertical_AnodeUp;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B529
+Path = /54429063
+Reference = U1;
+ValeurCmp = LM2576;
+IdModule  = Pentawatts:Pentawatt_Neutral_Straight_Vertical_TO220-5-T05A;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A147CB
+Path = /53F29102
+Reference = R3;
+ValeurCmp = 1k;
+IdModule  = Resistors_ThroughHole:Resistor_Horizontal_RM15mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A147DD
+Path = /53F103D6
+Reference = R1;
+ValeurCmp = 1k;
+IdModule  = Resistors_ThroughHole:Resistor_Horizontal_RM10mm;
+EndCmp
+
+BeginCmp
+TimeStamp = 54A0B561
+Path = /54429DD8
 Reference = VR1;
 ValeurCmp = VR;
-IdModule  = Capacitors_ThroughHole:Capacitor12MMDiscRM7.75;
+IdModule  = Capacitors_ThroughHole:Capacitor6MMDiscRM5;
 EndCmp
 
 EndListe
